# rintel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.html  TODO.md  about.hbs  about.toml  renovate.json
.cargo/: config.toml
.github/workflows/: auto-release.yml  build.yml  claude-code-review.yml  claude.yml  issue-implement.yml  issue-scan.yml  lint.yml  test.yml
apple-intelligence/Sources/AppleIntelligence/: Bridge.swift
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: main.rs
apps/cli/src/commands/: ask.rs  chat.rs  mod.rs  session.rs
apps/gui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json
apps/gui/src/: App.tsx  formatTime.ts  main.tsx  styles.css  types.ts
apps/gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: lib.rs  main.rs  state.rs
apps/gui/src-tauri/src/commands/: ai.rs  claude_code.rs  file.rs  mod.rs  session.rs
apps/gui/src/components/: ChatView.tsx  FileDropZone.tsx  MessageBubble.tsx  SessionSidebar.tsx  StatusBar.tsx
apps/gui/src/components/claude-code/: ClaudeCodeView.tsx  ClaudeConversation.tsx  ClaudeSessionList.tsx  ProjectList.tsx
apps/gui/src/hooks/: useAi.ts  useClaudeCode.ts  useSessions.ts
crates/ai-provider/: Cargo.toml  build.rs
crates/ai-provider/src/: lib.rs  provider.rs  stub.rs  types.rs
crates/ai-provider/src/apple/: ffi.rs  mod.rs  provider.rs
crates/ai-session/: Cargo.toml
crates/ai-session/src/: config.rs  lib.rs  message.rs  persistence.rs  session.rs
