[workspace]
resolver = "2"
members = ["crates/ai-provider", "crates/ai-session", "apps/cli", "apps/gui/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ai-provider = { path = "crates/ai-provider" }
ai-session = { path = "crates/ai-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
