[package]
name = "ai-provider"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1"

[build-dependencies]
swift-rs = { version = "1", features = ["build"] }
