[package]
name = "rintel-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "rintel_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ai-provider.workspace = true
ai-session.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }
